--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.12)
 project(project2csc173 C)
 
-set(CMAKE_C_STANDARD 99)
+set(CMAKE_C_STANDARD 99 _CRT_SECURE_NO_WARNINGS)
 
-add_executable(project2csc173 main.c)
+add_executable(project2csc173 main.c main.c)
