--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(project2csc173 C)
 
 set(CMAKE_C_STANDARD 99 _CRT_SECURE_NO_WARNINGS)
 
-add_executable(project2csc173 main.c main.c)
+add_executable(project2csc173 main.c main.c stack.h)
